--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Efeito Parallax</title>
-    <link rel="stylesheet" href="meuStyle.css" />
+    <title>Portfólio Parallax</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- header -->
