Muda nav e adiciona parágrafo na seção home.

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <h1><a href="#">LOGO</a></h1>
       <nav>
         <ul>
-          <li><a href="#">Link</a></li>
-          <li><a href="#">Link</a></li>
-          <li><a href="#">Link</a></li>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#sobre">Sobre</a></li>
+          <li><a href="#">...</a></li>
         </ul>
       </nav>
     </header>
@@ -23,12 +23,13 @@
       <!-- main -->
       <main>
         <!-- section inicial -->
-        <section class="sec-inicial parallax">
+        <section class="sec-inicial parallax" id="home">
           <h1>Olá!👋🏽</h1>
           <h2>Me chamo José Isaac</h2>
+          <p>⬇ Desliza pra baixo aí ⬇</p>
         </section>
         <!-- section com texto -->
-        <section class="sec-texto sec-texto-1">
+        <section class="sec-texto sec-texto-1" id="sobre">
           <h2>Sobre Mim</h2>
           <img
             id="dev"
