Adiciona ícones de redes no footer.

--- a/index.html
+++ b/index.html
@@ -50,15 +50,40 @@
           </p>
         </section>
         <!-- section com img -->
-        <section class="parallax parallax-1"></section>
+        <section class="parallax parallax-2">
+          <h2>Projetos</h2>
+          <div class="projeto">
+            <h3>Nome do Projeto 1</h3>
+            <p>Descrição breve do projeto e as tecnologias utilizadas.</p>
+            <a href="link-do-projeto" target="_blank">Ver Projeto</a>
+          </div>
+          <div class="projeto">
+            <h3>Nome do Projeto 2</h3>
+            <p>Descrição breve do projeto e as tecnologias utilizadas.</p>
+            <a href="link-do-projeto" target="_blank">Ver Projeto</a>
+          </div>
+        </section>
         <!-- section com texto -->
         <!-- <section class="sec-texto sec-texto2"></section> -->
       </main>
       <footer>
-        <p>
-          Desenvolvido por
-          <a href="https://github.com/joseisaacpy">@joseisaacpy</a>
-        </p>
+        <p>Desenvolvido por José Isaac</p>
+        <div class="redes">
+          <!-- linkedin -->
+          <a
+            href="https://www.linkedin.com/in/jos%C3%A9-isaac-nascimento/"
+            target="_blank"
+            ><img src="./img/linkedin-cor.svg" alt=""
+          /></a>
+          <!-- instagram -->
+          <a href="https://www.instagram.com/j0se_isaacsn" target="_blank"
+            ><img src="./img/instagram-cor.svg" alt=""
+          /></a>
+          <!-- github -->
+          <a href="https://github.com/joseisaacpy" target="_blank"
+            ><img src="./img/github-cor.svg" alt=""
+          /></a>
+        </div>
       </footer>
     </div>
   </body>
