Adiciona fonte externa

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <body>
     <!-- header -->
     <header>
-      <h1><a href="#">LOGO</a></h1>
+      <h1 id="logo"><a href="#">Isaac</a></h1>
       <nav>
         <ul>
           <li><a href="#home">Home</a></li>
           <li><a href="#sobre">Sobre</a></li>
-          <li><a href="#">...</a></li>
+          <li><a href="#projetos">Projetos</a></li>
         </ul>
       </nav>
     </header>
@@ -50,7 +50,7 @@
           </p>
         </section>
         <!-- section com img -->
-        <section class="parallax parallax-2">
+        <section id="projetos" class="parallax parallax-2">
           <h2>Projetos</h2>
           <div class="projeto">
             <h3>Nome do Projeto 1</h3>
