Adiciona conteúdo na seção de projetos.

--- a/index.html
+++ b/index.html
@@ -52,15 +52,27 @@
         <!-- section com img -->
         <section id="projetos" class="parallax parallax-2">
           <h2>Projetos</h2>
-          <div class="projeto">
-            <h3>Nome do Projeto 1</h3>
-            <p>Descrição breve do projeto e as tecnologias utilizadas.</p>
-            <a href="link-do-projeto" target="_blank">Ver Projeto</a>
-          </div>
-          <div class="projeto">
-            <h3>Nome do Projeto 2</h3>
-            <p>Descrição breve do projeto e as tecnologias utilizadas.</p>
-            <a href="link-do-projeto" target="_blank">Ver Projeto</a>
+          <div class="grade-projetos">
+            <div class="projeto">
+              <h3>Nome do Projeto 1</h3>
+              <p>Descrição breve do projeto e as tecnologias utilizadas.</p>
+              <a href="link-do-projeto" target="_blank">Ver Projeto</a>
+            </div>
+            <div class="projeto">
+              <h3>Nome do Projeto 2</h3>
+              <p>Descrição breve do projeto e as tecnologias utilizadas.</p>
+              <a href="link-do-projeto" target="_blank">Ver Projeto</a>
+            </div>
+            <div class="projeto">
+              <h3>Nome do Projeto 2</h3>
+              <p>Descrição breve do projeto e as tecnologias utilizadas.</p>
+              <a href="link-do-projeto" target="_blank">Ver Projeto</a>
+            </div>
+            <div class="projeto">
+              <h3>Nome do Projeto 2</h3>
+              <p>Descrição breve do projeto e as tecnologias utilizadas.</p>
+              <a href="link-do-projeto" target="_blank">Ver Projeto</a>
+            </div>
           </div>
         </section>
         <!-- section com texto -->
