Adiciona link aos projetos

--- a/index.html
+++ b/index.html
@@ -54,24 +54,49 @@
           <h2>Projetos</h2>
           <div class="grade-projetos">
             <div class="projeto">
-              <h3>Nome do Projeto 1</h3>
+              <h3>Site Parallax</h3>
               <p>Descrição breve do projeto e as tecnologias utilizadas.</p>
-              <a href="link-do-projeto" target="_blank">Ver Projeto</a>
+              <a
+                href="https://joseisaacpy.github.io/site-parallax/"
+                target="_blank"
+                >Ver Projeto</a
+              >
             </div>
             <div class="projeto">
-              <h3>Nome do Projeto 2</h3>
+              <h3>Site Droid</h3>
               <p>Descrição breve do projeto e as tecnologias utilizadas.</p>
-              <a href="link-do-projeto" target="_blank">Ver Projeto</a>
+              <a
+                href="https://joseisaacpy.github.io/projeto-android-cursoemvideo/"
+                target="_blank"
+                >Ver Projeto</a
+              >
             </div>
             <div class="projeto">
-              <h3>Nome do Projeto 2</h3>
+              <h3>Links Sociais</h3>
               <p>Descrição breve do projeto e as tecnologias utilizadas.</p>
-              <a href="link-do-projeto" target="_blank">Ver Projeto</a>
+              <a
+                href="https://joseisaacpy.github.io/social-links/"
+                target="_blank"
+                >Ver Projeto</a
+              >
             </div>
             <div class="projeto">
-              <h3>Nome do Projeto 2</h3>
+              <h3>Cordel Web</h3>
               <p>Descrição breve do projeto e as tecnologias utilizadas.</p>
-              <a href="link-do-projeto" target="_blank">Ver Projeto</a>
+              <a
+                href="https://joseisaacpy.github.io/projeto-cordel-cursoemvideo/"
+                target="_blank"
+                >Ver Projeto</a
+              >
+            </div>
+            <div class="projeto">
+              <h3>Phone Frame</h3>
+              <p>Descrição breve do projeto e as tecnologias utilizadas.</p>
+              <a
+                href="https://joseisaacpy.github.io/projeto-redes-sociais-cursoemvideo/"
+                target="_blank"
+                >Ver Projeto</a
+              >
             </div>
           </div>
         </section>
