--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
     <div class="geral">
       <!-- main -->
       <main>
-        <!-- section inicial -->
+        <!-- section inicial / home -->
         <section class="sec-inicial parallax" id="home">
           <h1>Olá!👋🏽</h1>
           <h2>Me chamo José Isaac</h2>
           <p>⬇ Desliza pra baixo aí ⬇</p>
         </section>
-        <!-- section com texto -->
+        <!-- section sobre -->
         <section class="sec-texto sec-texto-1" id="sobre">
           <h2>Sobre Mim</h2>
           <img
@@ -49,8 +49,34 @@
             criar aplicações modernas e acessíveis.
           </p>
         </section>
-        <!-- section com img -->
-        <section id="projetos" class="parallax parallax-2">
+        <!-- section -->
+        <section class="sec-texto sec-texto-2" id="tecnologias">
+          <h2>Tecnologias</h2>
+          <!-- html -->
+          <div class="grade-tecnologias">
+            <figure>
+              <img
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg"
+              />
+              <figcaption>HTML5</figcaption>
+            </figure>
+            <figure>
+              <img
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg"
+              />
+              <figcaption>HTML5</figcaption>
+            </figure>
+            <!-- css -->
+            <figure>
+              <img
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg"
+              />
+              <figcaption>CSS3</figcaption>
+            </figure>
+          </div>
+        </section>
+        <!-- section projetos / links -->
+        <section class="parallax parallax-2" id="projetos">
           <h2>Projetos</h2>
           <div class="grade-projetos">
             <div class="projeto">
@@ -100,8 +126,6 @@
             </div>
           </div>
         </section>
-        <!-- section com texto -->
-        <!-- <section class="sec-texto sec-texto2"></section> -->
       </main>
       <footer>
         <p>Desenvolvido por José Isaac</p>
