Atualiza estilo do formulário.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
           <li><a href="#home">Home</a></li>
           <li><a href="#sobre">Sobre</a></li>
           <li><a href="#projetos">Projetos</a></li>
+          <li><a href="#formulario">Contato</a></li>
         </ul>
       </nav>
     </header>
@@ -105,16 +106,39 @@
           <h2>Formulário de Contato</h2>
           <form action="enviardados.php" method="get">
             <label for="name">Nome:</label>
-            <input type="text" id="name" name="name" required />
+            <input
+              type="text"
+              id="name"
+              name="name"
+              placeholder="Digite seu nome"
+              required
+            />
 
             <label for="assunto">Assunto:</label>
-            <input type="text" id="assunto" name="assunto" required />
+            <input
+              type="text"
+              id="assunto"
+              name="assunto"
+              placeholder="Digite o assunto"
+              required
+            />
 
             <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required />
-
+            <input
+              type="email"
+              id="email"
+              name="email"
+              placeholder="Digite seu email"
+              required
+            />
             <label for="message">Mensagem:</label>
-            <textarea id="message" name="message" required rows="5"></textarea>
+            <textarea
+              id="message"
+              name="message"
+              placeholder="Digite sua mensagem"
+              required
+              rows="5"
+            ></textarea>
 
             <button type="submit">Enviar</button>
           </form>
